# noapp

./: .gitignore  .valgrindrc  AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  README.md  bootstrap  config.h.in  config.status  configure  configure.ac  vcommon.supp  vpath_install.sh  vrecognizer.supp  vrecorder.supp
docs/: analysis.asta
docs/analysis/: analysis.asta  core.h  notes.txt  rctsl.h  signatures.h  user.h
docs/proposal/: questions.txt
docs/proposal/uml/: analysis.asta
examples/: async_playback.c  async_playfile.c  change_max_size_fifo.c  cmu_example.c  double.raw  encoder  fifo_capacity.c  go_forward_me.pcm  goforward_me.raw  rms.py  silence.raw  simple_read.c  threshold.pcm
include/: log.h  noapp.h  rec_handlers.h  rec_handles.h  recognizer.h  recon_handles.h  recorder.h  utils.h
includes/: recorder.h
scripts/: split_utterances.sh  vpath_install.sh
src/: Makefile.am  Makefile.in
src/noapp/: noapp_cmd.c
src/noapp_src/: noapp.c
src/recognizer/: recognizer.c
src/recognizer_src/: recognizer.c  recon_handles.c
src/recorder/: Makefile.am  Makefile.in  rec_handlers.c  recorder.c
src/recorder/.deps/: recorder.Po
src/recorder_src/: rec_handles.c  recorder.c
src/translator/: translator.c
src/utils/: utils.c
